--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Tic-Tac-Toe</title>
+    <title>Tic Tac Toe</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -22,6 +22,12 @@
             <div class="box XO" id="22"></div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <div class="winner-box">
+
+    </div>
+    <div class="button-div">
+
+    </div>
+    <script src="./index.js"></script>
 </body>
 </html>
