--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <div class="button-div">
 
     </div>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
